--- a/ATU Reporter/Results/Settings.properties
+++ b/ATU Reporter/Results/Settings.properties
@@ -1,6 +1,6 @@
 #
-#Sat May 23 13:50:46 IST 2020
-skippedList=0;0;
-failedList=0;1;
-run=2
-passedList=5;0;
+#Mon May 25 12:42:46 IST 2020
+skippedList=0;0;4;0;0;0;0;
+failedList=0;1;1;1;1;1;1;
+run=7
+passedList=5;0;0;0;0;0;0;
