--- a/Project.properties
+++ b/Project.properties
@@ -7,3 +7,9 @@
 browser=gc
 env=prod
 url=https://demo.openemr.io/openemr
+db.host=localhost
+db.port=3306
+db.username=root
+db.password=welcome@123
+db.name=sys
+
