--- a/ATU Reporter/Results/Settings.properties
+++ b/ATU Reporter/Results/Settings.properties
@@ -1,6 +1,6 @@
 #
-#Mon May 25 12:42:46 IST 2020
-skippedList=0;0;4;0;0;0;0;
-failedList=0;1;1;1;1;1;1;
-run=7
-passedList=5;0;0;0;0;0;0;
+#Sun May 31 16:26:44 IST 2020
+skippedList=0;0;4;0;0;0;0;0;1;
+failedList=0;1;1;1;1;1;1;1;0;
+run=9
+passedList=5;0;0;0;0;0;0;0;0;
